k8s/test/ingress-test-standard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gfz-test
  namespace: test
spec:
  ingressClassName: traefik
  rules:
  - host: test.gfz.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
