k8s/test/ingress-test.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gfz-test
  namespace: test
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.gfz.local`) && PathPrefix(`/api`)
    kind: Rule
    services:
    - name: backend
      port: 8080
  - match: Host(`test.gfz.local`)
    kind: Rule
    services:
    - name: frontend
      port: 3000
